package _02_DynamicPricingEngineForFinance.derivative;

import java.util.Date;

public class Derivative {
    private AssetType assetType;
    private String currency;
    private Date tradeDate;
    private Date maturityDate;

    // Other attributes

    // getters-setters
}
