package _02_DynamicPricingEngineForFinance.marketData;

public class MarketData {
}
